{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 28,
  "lineage": "e9dac135-c5f0-985a-54b5-1556f221310a",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "events_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0551efd3c2b669f",
            "arn": "arn:aws:ec2:us-east-1:528062813765:elastic-ip/eipalloc-0e0551efd3c2b669f",
            "association_id": "eipassoc-0640f8ee7c2da71d2",
            "domain": "vpc",
            "id": "eipalloc-0e0551efd3c2b669f",
            "instance": "i-008276edb1e38a767",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ac557e64d5bb7f39",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-210-119-37.compute-1.amazonaws.com",
            "public_ip": "3.210.119.37",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-infra-events-eip"
            },
            "tags_all": {
              "Name": "dermatech-infra-events-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:528062813765:instance/i-04a4e25407eb747ce",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a4e25407eb747ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-047469474580a769d"
              }
            ],
            "primary_network_interface_id": "eni-047469474580a769d",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-236-34-151.compute-1.amazonaws.com",
            "public_ip": "54.236.34.151",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e2c97ba5fa792390",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015f785847dab44ec",
            "tags": {
              "Name": "dermatech-infra-events-server"
            },
            "tags_all": {
              "Name": "dermatech-infra-events-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0c94db58fdc684fa7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "528062813765",
            "id": "i-04a4e25407eb747ce",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.aws_security_group.events_sg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "events_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528062813765:security-group/sg-0c94db58fdc684fa7",
            "description": "Security Group for Events Infrastructure (Whitelisted)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c94db58fdc684fa7",
            "ingress": [
              {
                "cidr_blocks": [
                  "100.52.22.97/32"
                ],
                "description": "SSH Access from QA Gateway",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "3.220.53.59/32",
                  "54.86.159.130/32"
                ],
                "description": "Data Traffic from Trusted App Nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "dermatech-infra-events-sg",
            "name_prefix": "",
            "owner_id": "528062813765",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dermatech-infra-events-sg"
            },
            "tags_all": {
              "Name": "dermatech-infra-events-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1207b3a52ece83d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "528062813765",
            "id": "sg-0c94db58fdc684fa7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528062813765:internet-gateway/igw-02d52462e0ebcc546",
            "id": "igw-02d52462e0ebcc546",
            "owner_id": "528062813765",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-infra-events-igw"
            },
            "tags_all": {
              "Name": "dermatech-infra-events-igw"
            },
            "vpc_id": "vpc-0a1207b3a52ece83d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528062813765:route-table/rtb-06ef2fb982e27792b",
            "id": "rtb-06ef2fb982e27792b",
            "owner_id": "528062813765",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d52462e0ebcc546",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dermatech-infra-events-public-rt"
            },
            "tags_all": {
              "Name": "dermatech-infra-events-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1207b3a52ece83d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "528062813765",
            "id": "rtb-06ef2fb982e27792b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e762195f90c00b87",
            "region": "us-east-1",
            "route_table_id": "rtb-06ef2fb982e27792b",
            "subnet_id": "subnet-015f785847dab44ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528062813765:subnet/subnet-015f785847dab44ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015f785847dab44ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528062813765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dermatech-infra-events-public-subnet"
            },
            "tags_all": {
              "Name": "dermatech-infra-events-public-subnet"
            },
            "vpc_id": "vpc-0a1207b3a52ece83d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "528062813765",
            "id": "subnet-015f785847dab44ec",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528062813765:vpc/vpc-0a1207b3a52ece83d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0147aef72c7249137",
            "default_route_table_id": "rtb-0b6e2fabdb29b4b90",
            "default_security_group_id": "sg-0fd48a5a7ab6d0c14",
            "dhcp_options_id": "dopt-5c020927",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1207b3a52ece83d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6e2fabdb29b4b90",
            "owner_id": "528062813765",
            "region": "us-east-1",
            "tags": {
              "Environment": "infra-events",
              "Name": "dermatech-infra-events-vpc"
            },
            "tags_all": {
              "Environment": "infra-events",
              "Name": "dermatech-infra-events-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "528062813765",
            "id": "vpc-0a1207b3a52ece83d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}